# Xcar_chidi

./: .gitignore  README.md
Deliveries/: Project Plan SIEC 2023-2024.docx  Review_0.pptx  Review_1.pptx  Review_4.pptx
ai_processing/: img_converter.py  listener.py  old_listener.py  old_stalker.py  stalker.py  test.py  test_loop.py
install/: local_setup.sh  setup.sh
jetsonNano/: Dockerfile  docker-compose.yml
jetsonNano/ros2_ws/install/: local_setup.sh  setup.sh
jetsonNano/ros2_ws/log/: latest_build
log/: latest_build
raspberryPI3/: app.py  redirect-messages-on-distant-machine.py  test.html  transfer.py  transfer2.py
raspberryPI3/install/: local_setup.sh  setup.sh
raspberryPI3/log/: latest_build
raspberryPI3/ros2_ws/install/: local_setup.sh  setup.sh
raspberryPI3/ros2_ws/log/: latest_build
raspberryPI3/ros2_ws/src/state_machine/: CMakeLists.txt  README.md  package.xml
raspberryPI3/ros2_ws/src/state_machine/src/: state_machine_node.cpp
raspberryPI3/ros2_ws/src/state_machine/srv/: StateMemory.srv
raspberryPI3/static/: index.html
raspberryPI3/static/X-Car Site/: index.html  styles.css
raspberryPI3/static/site/: autonomous.html  emergency.html  home.html  index.html  manual.html  rickroll.html  ros-script.js  security.html  styles.css  tracking.html
raspberryPI3/static2/: index.html
raspberryPI3/static2/site/: autonomous.html  emergency.html  home.html  index.html  manual.html  rickroll.html  ros-script.js  styles.css  test.html  tracking.html
raspberryPI3/static3/Website/: animation.js  demo.html  demo_style.css
raspberryPI3/static3/site/: app.js
(+232 files in other folders)
